--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "dependencies": {
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.3",
+    "antd": "^3.26.7",
     "moment": "^2.29.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.1.2",
+    "typescript": "^3.7.4",
     "universal-cookie": "^4.0.4"
   }
 }
